src/test/ui/generic-associated-types/bugs/issue-100013.stderr
error: lifetime bound not satisfied
  --> $DIR/issue-100013.rs:15:5
   |
LL | /     async { // a generator checked for autotrait impl `Send`
LL | |
LL | |         let x = None::<I::Future<'_, '_>>; // a type referencing GAT
LL | |         async {}.await; // a yield point
LL | |     }
   | |_____^
   |
note: the lifetime defined here, ...
  --> $DIR/issue-100013.rs:17:38
   |
LL |         let x = None::<I::Future<'_, '_>>; // a type referencing GAT
   |                                      ^^
note: ...must outlive the lifetime defined here
  --> $DIR/issue-100013.rs:17:34
   |
LL |         let x = None::<I::Future<'_, '_>>; // a type referencing GAT
   |                                  ^^

error: aborting due to previous error

